cluster/gitops/development/harbor/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: harbor
specs:
  - description: core
    endpointSelector: &core_selector
      matchLabels:
        app.kubernetes.io/name: harbor
        app.kubernetes.io/component: core
        app.kubernetes.io/instance: harbor
    egress:
      # DNS resolution
      - &dns_resolution
        toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: networking
              endpoints.netpols.home.arpa/cluster-dns: "true"
        toPorts:
          - ports:
              - port: "53"
                protocol: UDP
              - port: "53"
                protocol: TCP
            rules:
              dns:
                - matchPattern: "*"
      # Access to the backend PostgreSQL database
      - &to_database
        toEndpoints:
          - matchLabels:
              cnpg.io/cluster: harbor-postgres
        toPorts:
          - ports:
              - port: "5432"
                protocol: TCP
      # This does not currently work due to https://github.com/envoyproxy/envoy/issues/41659
      # # Access to the backend Redis/Dragonfly instance
      # - &to_redis
      #   toEndpoints:
      #     - matchLabels:
      #         app.kubernetes.io/name: dragonfly
      #         app: harbor-dragonfly
      #   toPorts:
      #     - ports:
      #         - port: "6379"
      #           protocol: TCP
      # Access to the backend Redis instance
      - &to_redis
        toEndpoints:
          - &redis_service_selector
            matchLabels:
              app.kubernetes.io/name: harbor
              app.kubernetes.io/component: redis
              app.kubernetes.io/instance: harbor
        toPorts:
          - ports:
              - port: "6379"
                protocol: TCP
      # Access to the job service
      - toEndpoints:
          - &job_service_selector
            matchLabels:
              app.kubernetes.io/name: harbor
              app.kubernetes.io/component: jobservice
              app.kubernetes.io/instance: harbor
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
      # Access to the registry service
      - &to_registry
        toEndpoints:
          - &registry_service_selector
            matchLabels:
              app.kubernetes.io/name: harbor
              app.kubernetes.io/component: registry
              app.kubernetes.io/instance: harbor
        toPorts:
          - ports:
              - port: "5000"
                protocol: TCP
              - port: "8080"
                protocol: TCP
      # Access to the trivy service
      - toEndpoints:
          - &trivy_service_selector
            matchLabels:
              app.kubernetes.io/name: harbor
              app.kubernetes.io/component: trivy
              app.kubernetes.io/instance: harbor
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
      # Access to the portal service
      - toEndpoints:
          - &portal_service_selector
            matchLabels:
              app.kubernetes.io/name: harbor
              app.kubernetes.io/component: portal
              app.kubernetes.io/instance: harbor
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
      # Access to Authentik for auth
      # This needs to be the gateway because Harbor doesn't support separate internal/external URLs
      - &to_internal_gateway
        toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: networking
              app.kubernetes.io/name: ingress-gateways
              gateway.networking.k8s.io/gateway-name: internal-gateway
        toPorts:
          - ports:
              - port: "443"
                protocol: TCP
    ingress:
      # Kubelet for healthcheck
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
      # Metrics
      - &from_metrics_scraper
        fromEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: monitoring
              endpoints.netpols.home.arpa/metrics-scraper: "true"
        toPorts:
          - ports:
              - port: "8001"
                protocol: TCP
      - fromEndpoints:
          # Ingress from internal gateway
          - &internal_ingress_gateway_selector
            matchLabels:
              io.kubernetes.pod.namespace: networking
              app.kubernetes.io/name: ingress-gateways
              gateway.networking.k8s.io/gateway-name: internal-gateway
          # Ingress from external gateway
          - &external_ingress_gateway_selector
            matchLabels:
              io.kubernetes.pod.namespace: networking
              app.kubernetes.io/name: ingress-gateways
              gateway.networking.k8s.io/gateway-name: external-gateway
          # Access from the exporter service
          - &exporter_service_selector
            matchLabels:
              app.kubernetes.io/name: harbor
              app.kubernetes.io/component: exporter
              app.kubernetes.io/instance: harbor
          - *job_service_selector
          - *trivy_service_selector
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP

  - description: portal
    endpointSelector: *portal_service_selector
    ingress:
      # Kubelet for healthcheck
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
      - fromEndpoints:
          - *internal_ingress_gateway_selector
          - *external_ingress_gateway_selector
          - *core_selector
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP

  - description: jobservice
    endpointSelector: *job_service_selector
    egress:
      - *dns_resolution
      - *to_database
      - *to_redis
      - *to_registry
      # Access to the core service
      - &to_core
        toEndpoints:
          - *core_selector
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
      # Access to trivy
      - toEndpoints:
          - *trivy_service_selector
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
    ingress:
      # Kubelet for healthcheck
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "8080"
      - *from_metrics_scraper
      # Access from the core service
      - fromEndpoints:
          - *core_selector
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP

  - description: registry
    endpointSelector: *registry_service_selector
    egress:
      - *dns_resolution
      # Allow access to S3
      - *to_internal_gateway
      - *to_redis
    ingress:
      # Kubelet for healthcheck
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "5000"
                protocol: TCP
              - port: "8080"
                protocol: TCP
      - *from_metrics_scraper
      - fromEndpoints:
          - *core_selector
          - *job_service_selector
        toPorts:
          - ports:
              - port: "5000"
                protocol: TCP
              - port: "8080"
                protocol: TCP

  - description: trivy
    endpointSelector: *trivy_service_selector
    egress:
      - *dns_resolution
      - *to_redis
      - *to_core
      # See https://github.com/aquasecurity/trivy/blob/e0c04168b9cce9331163336d65c02452822bc319/docs/docs/advanced/air-gap.md
      - toFQDNs:
          # To GCR and GHCR for image vulnerability database updates
          - matchName: mirror.gcr.io
          - matchName: googlecode.l.googleusercontent.com
          - matchName: ghcr.io
          - matchName: pkg-containers.githubusercontent.com
          # To VEX Hub for vulnerability data
          - matchName: api.github.com
          - matchName: codeload.github.com
          # To Maven for package identification
          - matchName: repo.maven.org
        toPorts:
          - ports:
              - port: "443"
                protocol: TCP
              - port: "80"
                protocol: TCP
    ingress:
      # Kubelet for healthcheck
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
      - fromEndpoints:
          - *core_selector
          - *job_service_selector
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP

  - description: exporter
    endpointSelector: *exporter_service_selector
    egress:
      - *dns_resolution
      - *to_database
      - *to_redis
      - toEndpoints:
          - *core_selector
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
    ingress:
      # Kubelet for healthcheck
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "8001"
                protocol: TCP
      - *from_metrics_scraper

  - description: redis
    endpointSelector: *redis_service_selector
    ingress:
      - fromEndpoints:
          - *core_selector
          - *job_service_selector
          - *exporter_service_selector
          - *trivy_service_selector
          - *registry_service_selector
        toPorts:
          - ports:
              - port: "6379"
                protocol: TCP
